tests/ui/dep-graph/dep-graph-caller-callee.stderr
error: OK
  --> $DIR/dep-graph-caller-callee.rs:21:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: no path from `x` to `typeck_root`
  --> $DIR/dep-graph-caller-callee.rs:32:34
   |
LL |     #[rustc_then_this_would_need(typeck_root)]
   |                                  ^^^^^^^^^^^

error: aborting due to 2 previous errors

